--- a/docs/package.json
+++ b/docs/package.json
@@ -10,8 +10,8 @@
   "repository": "/create-vuepress-site-example",
   "scripts": {
     "dev": "vuepress dev src",
-    "build": "vuepress build src",
-    "gh": "cross-env BASE='/npx-create-vuepress-site-example/' vuepress build src"
+    "build": "vuepress build src --no-cache",
+    "gh": "cross-env BASE='/npx-create-vuepress-site-example/' npm run build"
   },
   "license": "MIT",
   "devDependencies": {
