--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,8 +4,8 @@ name: CI
 on:
   push:
     branches: [ master ]
-    paths:
-      - docs/*
+    #paths:
+    #  - docs/*
   pull_request:
     branches: [ master ]
     #paths:
